--- a/frontend/customer/public/index.html
+++ b/frontend/customer/public/index.html
@@ -28,7 +28,8 @@
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%"></script>
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%"></script> -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%&libraries=services,clusterer,drawing"></script>
     <title>Trend Food Fighter</title>
   </head>
   <body>
